--- a/MalDev.html
+++ b/MalDev.html
@@ -55,7 +55,7 @@
                 </a>
             </div>
             <div class="card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
-                <a href="#" style="text-decoration: none; color: inherit;">
+                <a href="./MalDev/PE-Files.html" style="text-decoration: none; color: inherit;">
                     <img src="./src/Pics/PE.jpg" alt="Image 2" loading="lazy">
                     <h3>Portable Executable PE</h3>
                     <p style="direction: rtl;">هتفهم بنية ملفات الـ PE وليه هي مهمة وإزاي بتشتغل</p>
