--- a/MalDev/PE-Files.html
+++ b/MalDev/PE-Files.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <style>
+        html,
         body {
             font-family: 'Cairo', sans-serif;
             margin: 0;
@@ -123,7 +124,7 @@
 
 
         header h1 {
-            font-size: 2.5rem;
+            font-size: 2rem;
             margin-bottom: 10px;
         }
 
