--- a/MalDev/PE-Files.html
+++ b/MalDev/PE-Files.html
@@ -356,7 +356,7 @@
                 <ol>
                     <li style="font-weight: bold;"> جزء الـ Headers </li>
                     <p>↑ ودا فية معلومات تخص الملف نفسه .. زي نوعه (EXE / DLL / SYS) .. وكمان نقدر نعرف معلومات تانية زي
-                        هل الملف ده -bit أو 64-bit ، وحجم الملف ، وهكذا .. وهنتكلم عنهم بالتفصيل كمان شوية.</p>
+                        هل الملف ده 32-bit أو 64-bit وحجم الملف ، وهكذا .. وهنتكلم عنهم بالتفصيل كمان شوية.</p>
                     <li style="font-weight: bold;">جزء الـ Data Directories </li>
                     <p>↑ وهنا بنعرف منه نقط الوصول اللـ بيقدر يوصل للـ Libraries ، سواء يعمل Import أو Export.</p>
                     <li style="font-weight: bold;">جزء الـ Sections </li>
