--- a/MalDev/PE-Files.html
+++ b/MalDev/PE-Files.html
@@ -629,17 +629,17 @@
                         <img src="../src/Pics/NT-Headers7.png" alt="NT-Headers7" class="article-image" loading="lazy">
                     </div>
                     <li style="font-weight: bold;">SizeOfCode</li>
-                    <p>↑ بيوضح حجم الأكواد التنفـذية ، وغالبًا بتكون موجودة فـ الـ .text Section.</p>
+                    <p>↑ بيوضح حجم الأكواد التنفـذية ، وغالبًا بتكون موجودة فـ الـ [.text] Section.</p>
                     <div class="article" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                         <img src="../src/Pics/NT-Headers8.png" alt="NT-Headers8" class="article-image" loading="lazy">
                     </div>
                     <li style="font-weight: bold;">SizeOfInitializedData</li>
-                    <p>↑ حجم البيانات اللـ تم تهيئتها ، وعادةً بتكون فـ الـ .data Section.</p>
+                    <p>↑ حجم البيانات اللـ تم تهيئتها ، وعادةً بتكون فـ الـ [.data] Section.</p>
                     <div class="article" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                         <img src="../src/Pics/NT-Headers9.png" alt="NT-Headers9" class="article-image" loading="lazy">
                     </div>
                     <li style="font-weight: bold;">SizeOfUninitializedData</li>
-                    <p>↑ حجم البيانات الغير مهيأة ، وعادةً بتكون فـ الـ .bss Section.</p>
+                    <p>↑ حجم البيانات الغير مهيأة ، وعادةً بتكون فـ الـ [.bss] Section.</p>
                     <div class="article" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                         <img src="../src/Pics/NT-Headers10.png" alt="NT-Headers10" class="article-image" loading="lazy">
                     </div>
