--- a/MalDev/PE-Files.html
+++ b/MalDev/PE-Files.html
@@ -893,8 +893,7 @@
                     <li>تاني جزء هنا بيحاول يفتح الملف اللـ انت عطتهوله ، بيستخدم <code
                             style="background: #16ff00; font-size: 14px;">CreateFileA</code> ودي Windows API بتفتح
                         الملف اللـ اسمه <code style="background: #16ff00; font-size: 14px;">argv[1]</code> .. وبصلاحيات
-                        <code
-                            style="background: #16ff00; font-size: 14px;"><code style="background: #16ff00; font-size: 14px;">MZ</code></code>
+                        <code style="background: #16ff00; font-size: 14px;">Read-Only</code>
                         عشان يقدر يقرأه .. ولو فشل فـ فتح الملف بيقولك انه فشل
                         عادي جدا.
                     </li>
