--- a/MalDev.html
+++ b/MalDev.html
@@ -64,12 +64,11 @@
                 </a>
             </div>
             <div class="card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">
-                <a href="#" style="text-decoration: none; color: inherit;">
+                <a href="./MalDev/Payload-Placement.html" style="text-decoration: none; color: inherit;">
                     <img src="./src/Pics/PayPlc.jpg" alt="Image 3" loading="lazy">
                     <h3>Payload Placement</h3>
-                    <p
-                        style="font-size: 30px; background: -webkit-linear-gradient(#16ff00, #000); background-clip: text; -webkit-text-fill-color: transparent;">
-                        SOON ....</p>
+                    <p class="date">17 February 2025</p>
+
                 </a>
             </div>
             <div class="card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
