--- a/MalDev/PE-Files.html
+++ b/MalDev/PE-Files.html
@@ -982,7 +982,7 @@
                             Mossé Cyber Security Institute</a></li>
             </div>
             <div class="nav-buttons">
-                <a href="#" onclick="nextArticle()" style="direction: ltr;">Next →</a>
+                <a href="./Payload-Placement.html" onclick="nextArticle()" style="direction: ltr;">Next →</a>
                 <a href="./Win-Internals.html" onclick="previousArticle()" style="direction: ltr;">← Previous</a>
             </div>
     </section>
