--- a/MalDev.html
+++ b/MalDev.html
@@ -73,12 +73,11 @@
                 </a>
             </div>
             <div class="card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
-                <a href="#" style="text-decoration: none; color: inherit;">
+                <a href="./MalDev/Payload-Encryption.html" style="text-decoration: none; color: inherit;">
                     <img src="./src/Pics/PayEnc.jpg" alt="Image 4" loading="lazy">
                     <h3>Payload Encryption</h3>
-                    <p
-                        style="font-size: 30px; background: -webkit-linear-gradient(#16ff00, #000); background-clip: text; -webkit-text-fill-color: transparent;">
-                        SOON ....</p>
+                    <p style="direction: rtl;">هتتعلم إزاي تشفر الشيل كود بتاعك بكذا طريقة مختلفة</p>
+                    <p class="date">23 February 2025</p>
                 </a>
             </div>
             <div class="card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
