--- a/MalDev.html
+++ b/MalDev.html
@@ -76,8 +76,16 @@
                 <a href="./MalDev/Payload-Encryption.html" style="text-decoration: none; color: inherit;">
                     <img src="./src/Pics/PayEnc.jpg" alt="Image 4" loading="lazy">
                     <h3>Payload Encryption</h3>
-                    <p style="direction: rtl;">هتتعلم إزاي تشفر الشيل كود بتاعك بكذا طريقة مختلفة</p>
+                    <p style="direction: rtl;">هتتعلم إزاي تشفر الشيل كود بكذا طريقة مختلفة</p>
                     <p class="date">23 February 2025</p>
+                </a>
+            </div>
+            <div class="card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
+                <a href="./MalDev/Payload-Obfuscation.html" style="text-decoration: none; color: inherit;">
+                    <img src="./src/Pics/PayObfs.jpg" alt="Image 4" loading="lazy">
+                    <h3>Payload Obfuscation</h3>
+                    <p style="direction: rtl;">هتتعلم إزاي تعمل تمويه للشيل كود بكذا طريقة مختلفة</p>
+                    <p class="date">26 February 2025</p>
                 </a>
             </div>
             <div class="card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
