--- a/MalDev.html
+++ b/MalDev.html
@@ -89,12 +89,11 @@
                 </a>
             </div>
             <div class="card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
-                <a href="#" style="text-decoration: none; color: inherit;">
+                <a href="./MalDev/DLL-Injection.html" style="text-decoration: none; color: inherit;">
                     <img src="./src/Pics/DLLi.jpg" alt="Image 5" loading="lazy">
                     <h3>DLL Injection</h3>
-                    <p
-                        style="font-size: 30px; background: -webkit-linear-gradient(#16ff00, #000); background-clip: text; -webkit-text-fill-color: transparent;">
-                        SOON ....</p>
+                    <p style="direction: rtl;">هتشوف تقنيات حقن الـ DLL سواء فـ بروسيس تانية أو لوكال</p>
+                    <p class="date">6 March 2025</p>
                 </a>
             </div>
             <div class="card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">
