--- a/MalDev.html
+++ b/MalDev.html
@@ -84,25 +84,24 @@
                 <a href="./MalDev/Payload-Obfuscation.html" style="text-decoration: none; color: inherit;">
                     <img src="./src/Pics/PayObfs.jpg" alt="Image 4" loading="lazy">
                     <h3>Payload Obfuscation</h3>
-                    <p style="direction: rtl;">هتتعلم إزاي تعمل تمويه للشيل كود بكذا طريقة مختلفة</p>
+                    <p style="direction: rtl;">هتكتشف إزاي تعمل تمويه للشيل كود بكذا طريقة مختلفة</p>
                     <p class="date">26 February 2025</p>
                 </a>
             </div>
             <div class="card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
                 <a href="./MalDev/DLL-Injection.html" style="text-decoration: none; color: inherit;">
-                    <img src="./src/Pics/DLLi.jpg" alt="Image 5" loading="lazy">
+                    <img src="./src/Pics/DLLi.webp" alt="Image 5" loading="lazy">
                     <h3>DLL Injection</h3>
                     <p style="direction: rtl;">هتشوف تقنيات حقن الـ DLL سواء فـ بروسيس تانية أو لوكال</p>
                     <p class="date">6 March 2025</p>
                 </a>
             </div>
             <div class="card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">
-                <a href="#" style="text-decoration: none; color: inherit;">
-                    <img src="./src/Pics/ShCdi.jpg" alt="Image 6" loading="lazy">
+                <a href="./MalDev/Shellcode-Injection.html" style="text-decoration: none; color: inherit;">
+                    <img src="./src/Pics/ShCdi.webp" alt="Image 6" loading="lazy">
                     <h3>ShellCode Injection</h3>
-                    <p
-                        style="font-size: 30px; background: -webkit-linear-gradient(#16ff00, #000); background-clip: text; -webkit-text-fill-color: transparent;">
-                        SOON ....</p>
+                    <p style="direction: rtl;">هتجرب إزاي تشغل الشيل كود لوكال أو تحقنة فـ بروسيس تانية</p>
+                    <p class="date">10 March 2025</p>
                 </a>
             </div>
             <div class="card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
