--- a/MalDev.html
+++ b/MalDev.html
@@ -104,7 +104,7 @@
                     <p class="date">10 March 2025</p>
                 </a>
             </div>
-            <div class="card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
+            <!-- <div class="card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                 <a href="#" style="text-decoration: none; color: inherit;">
                     <img src="./src/Pics/ThrdHij.jpg" alt="Image 7" loading="lazy">
                     <h3>Thread Injection</h3>
@@ -112,17 +112,17 @@
                         style="font-size: 30px; background: -webkit-linear-gradient(#16ff00, #000); background-clip: text; -webkit-text-fill-color: transparent;">
                         SOON ....</p>
                 </a>
-            </div>
+            </div> -->
             <div class="card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
                 <a href="#" style="text-decoration: none; color: inherit;">
-                    <img src="./src/Pics/APCi.jpg" alt="Image 8" loading="lazy">
+                    <img src="./src/Pics/APC-Inj.webp" alt="Image 8" loading="lazy">
                     <h3>APC Injection</h3>
                     <p
                         style="font-size: 30px; background: -webkit-linear-gradient(#16ff00, #000); background-clip: text; -webkit-text-fill-color: transparent;">
                         SOON ....</p>
                 </a>
             </div>
-            <div class="card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">
+            <!-- <div class="card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">
                 <a href="#" style="text-decoration: none; color: inherit;">
                     <img src="./src/Pics/SysAPCinj.jpg" alt="Image 9" loading="lazy">
                     <h3>Syscall APC Injection</h3>
@@ -184,7 +184,7 @@
                         style="font-size: 30px; background: -webkit-linear-gradient(#16ff00, #000); background-clip: text; -webkit-text-fill-color: transparent;">
                         SOON ....</p>
                 </a>
-            </div>
+            </div> -->
         </div>
     </section>
 
