--- a/MalDev.html
+++ b/MalDev.html
@@ -114,12 +114,11 @@
                 </a>
             </div> -->
             <div class="card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
-                <a href="#" style="text-decoration: none; color: inherit;">
+                <a href="./MalDev/APC-Injection.html" style="text-decoration: none; color: inherit;">
                     <img src="./src/Pics/APC-Inj.webp" alt="Image 8" loading="lazy">
                     <h3>APC Injection</h3>
-                    <p
-                        style="font-size: 30px; background: -webkit-linear-gradient(#16ff00, #000); background-clip: text; -webkit-text-fill-color: transparent;">
-                        SOON ....</p>
+                    <p style="direction: rtl;">هتستغل الـ APC لحقن شيل كود وتشغله جوا بروسيس بطرق مختلفة</p>
+                    <p class="date">27 March 2025</p>
                 </a>
             </div>
             <!-- <div class="card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">
